# decider

./: LICENSE  README.md  pyproject.toml  requirements.txt
decider/: __init__.py  data.py  gui.py  ranking.py
examples/: demo.py
