[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "decider"
version = "0.1.0"
description = "Decide things!"
authors = [{name = "Chris McComb", email = "ccm@cmu.edu"}]
license = {text = "MIT"}
dependencies = [
  "pandas",
  "gradio",
]

[project.optional-dependencies]
dev = [
  "black"
]

[tool.black]
line-length = 88
target-version = ['py39']
